# ros2_xmlrpc_interface

ros2_xmlrpc/ros2_xmlrpc_interface/: package.xml  setup.cfg  setup.py
ros2_xmlrpc/ros2_xmlrpc_interface/ros2_xmlrpc_interface/: ros2_xmlrpc_client_new.py  task_info_generater.py
ros2_xmlrpc/sesto_api_msgs/: CMakeLists.txt  package.xml
ros2_xmlrpc/sesto_api_msgs/msg/: ServerResponse.msg  SestoApiInfo.msg
