<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros2_xmlrpc_interface</name>
  <version>0.0.1</version>
  <description>
    Python package for ros2_xmlrpc_interface
  </description>
  <maintainer email="aarush.gupta@hopetechnik.com">Aarush Gupta</maintainer>
  <license>Apache License 2.0</license>

  <!--author email="esteve@osrfoundation.org">Esteve Fernandez</author-->

  <!--exec_depend>example_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend-->

  <buildtool_depend>ament_python</buildtool_depend>

  <!--exec_depend>example_interfaces</exec_depend-->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <!--test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend-->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
